--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start:server": "node server/index.js",
-    "server:watch":"nodemon server",
+    "server:watch": "nodemon server",
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "npm run build -- --configuration production",
@@ -29,6 +29,7 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "helmet": "^5.1.0",
+    "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
