--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,23 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Server Debug",
+      "port": 9229,
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script","debug"]
+    },
+    {
+      "name": "Client Debug",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://localhost:4200/",
+      "webRoot": "${workspaceFolder}",
+      "preLaunchTask": "npm: serve"
+    },
+    {
       "name": "ng serve",
       "type": "pwa-chrome",
       "request": "launch",
