--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ NODE_ENV = development
 PORT=4050
 MONGODB_URI = mongodb://localhost:27017/audio
 MONGOOSE_DEBUG = true
+JWT_SECRET = 8c5f9f83-63d9-45e0-a400-e25f6da87bb6
