--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "ng serve",
     "start:server": "node server/index.js",
     "server:watch": "nodemon server",
+    "serve:client": "ng serve --port 4230",
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "npm run build -- --configuration production",
@@ -33,11 +34,13 @@
     "express-async-handler": "^1.2.0",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "local-storage": "^2.0.0",
     "mongoose": "^6.4.5",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "refresh-token": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
