--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "local-storage": "^2.0.0",
     "mongoose": "^6.4.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
